2010-10-06 Josef Cacek
  * additional Certificate checks implemented
  * Certificate checks can be disabled in conf.properties under following keys:
    - certificate.checkValidity checks the time validity
    - certificate.checkKeyUsage checks if keyUsage extension contains "digitalSignature" or "nonRepudiation" bits set
    - certificate.checkCriticalExtensions checks if the certificate contains only supported critical extensions (only KeyUsage in this time)

2010-08-24 Josef Cacek (1.0.3)
  * Windows verifier launcher Verify.exe
  * Previous/Next page buttons in PDF preview window 

2010-08-18 Josef Cacek
  * Append mode is the default
  * Fixed page numbering in PdfRenderer preview

2010-07-26 Josef Cacek
  * Updated Japanese translation (thanks to mshibata(at)sf.net)

2010-07-14 Josef Cacek
  * Windows console launcher JSignPdfC.exe

2010-07-12 Josef Cacek (1.0.2)
  * Install Cert Tool doesn't work with jssecacerts file anymore, it uses directly {java.home}/lib/security/cacerts keystore
  * InstallCert creates backup of cacerts file before adding new certificate

2010-07-08 Josef Cacek
  * command line option --load-properties-file (-lpf) added
  * for windows package use embedded JRE 6 (32-bit, i.e. supports WINDOWS-MY keystore)

2010-06-22 Josef Cacek (released 1.0.1)
  * KeyStoreUtils fix - the simple didn't work correctly because of NPE for throwed by null key alias

2010-06-19 Josef Cacek (released 1.0.0)
  * font for visible signature is configurable (set in conf/conf.properties file)
  * certificate validity check and keyUsage can be disabled (set in conf/conf.properties file)
  
2010-06-16 Josef Cacek
  * splashscreen and ReleaseNotes for version 1.0.0 

2010-06-13 Josef Cacek
  * WINDOWS-MY keystore type (if it's present) set as the default one in GUI 
  
2010-06-09 Josef Cacek
  * PDFBox enabled again as a second try for rendering PDF (if Sun PdfRenderer fails)

2010-06-07 Josef Cacek
  * fixed reading of X.509 KeyUsage extension