@@ -53,6 +53,7 @@ console.setReason                     = Setting reason: {0}
 console.setRender                     = Setting Render mode
 console.setSignatureGraphic           = Setting image
 console.setVisibleSignature           = Creating visible signature
+console.settingTsaPolicy              = Setting TSA policy OID: {0}
 console.skippingSigning               = File validation failed, check your PDF paths. Skipping sign proccess.
 console.starting                      = Starting PDF Signer
 console.updateVersion                 = Updating PDF version info 1.{0} -> 1.{1}
@@ -119,6 +120,7 @@ gui.title                             = JSignPdf (version {0})
 gui.tsa.crlEnabled.checkbox           = Enable CRL
 gui.tsa.enabled.checkbox              = Use timestamp server
 gui.tsa.ocspEnabled.checkbox          = Enable OCSP
+gui.tsa.policy.label                  = TSA Policy (OID)
 gui.tsa.proxy.panel                   = Proxy settings
 gui.tsa.proxyHost.label               = Proxy host/port
 gui.tsa.proxyType.label               = Type
@@ -204,6 +206,7 @@ hlp.proxyType          = proxy type for internet connections. Default value is {
 hlp.quiet              = quiet mode - without info messages during process
 hlp.reason             = reason of signature. Empty by default.
 hlp.renderMode         = render mode for visible signatures. Default value is DESCRTIPTION_ONLY. Possible values are {0}
+hlp.tsaPolicy          = TSA policy OID which should be set to timestamp request.
 hlp.tsaPwd             = TSA user password. Use this switch if you use timestamping (-ts) and TSA server requires authentication.
 hlp.tsaUrl             = address of timestamping server (TSA). If you use this argument, the timestamp will be included to signature. (For testing purposes you can try following URL http://dse200.ncipher.com/TSS/HttpTspServer)
 hlp.tsaUser            = TSA user name. Use this switch if you use timestamping (-ts) and TSA server requires authentication.
