@@ -54,6 +54,7 @@ console.setReason                     = Nastavuji d\u016Fvod (Reason): {0}
 console.setRender                     = Nastavuji typ zobrazen\u00ED
 console.setSignatureGraphic           = Nastavuji obr\u00E1zek podpisu
 console.setVisibleSignature           = Vytv\u00E1\u0159\u00EDm viditeln\u00FD podpis
+console.settingTsaPolicy              = Nastavuji OID politiky \u010Dasov\u00E9ho raz\u00EDtka: {0}
 console.skippingSigning               = Kontrola PDF soubor\u016F selhala, zkontrolujte nastaven\u00E9 cesty. Podpis nebude vytvo\u0159en.
 console.starting                      = Spou\u0161t\u00EDm podepisov\u00E1n\u00ED PDF
 console.updateVersion                 = Aktualizuji verzi PDF 1.{0} -> 1.{1}
@@ -118,6 +119,7 @@ gui.title                             = JSignPdf (verze {0})
 gui.tsa.crlEnabled.checkbox           = Pou\u017E\u00EDt CRL
 gui.tsa.enabled.checkbox              = Pou\u017E\u00EDt server pro \u010Dasov\u00E1 raz\u00EDtka
 gui.tsa.ocspEnabled.checkbox          = Pou\u017E\u00EDt OCSP
+gui.tsa.policy.label                  = TSA politika (OID)
 gui.tsa.proxy.panel                   = Nastaven\u00ED proxy serveru
 gui.tsa.proxyHost.label               = Adresa serveru a port
 gui.tsa.proxyType.label               = Typ proxy serveru
@@ -200,6 +202,7 @@ hlp.proxyType          = typ proxy serveru pro internetov\u00E1 spojen\u00ED. V\
 hlp.quiet              = tich\u00FD m\u00F3d - bez informac\u00ED o pr\u016Fb\u011Bhu podepisov\u00E1n\u00ED
 hlp.reason             = d\u016Fvod (reason) podpisu. V\u00FDchoz\u00ED hodnota je pr\u00E1zdn\u00E1.
 hlp.renderMode         = typ zobrazen\u00ED viditeln\u00E9ho podpisu. V\u00FDchoz\u00ED hodnota je DESCRTIPTION_ONLY. Mo\u017En\u00E9 hodnoty: {0}
+hlp.tsaPolicy          = OID politiky serveru \u010Dasov\u00E9ho raz\u00EDtka.
 hlp.tsaPwd             = u\u017Eivatelsk\u00E9 heslo pro TSA. Pou\u017Eijte tuto volbu jestli\u017Ee vyu\u017E\u00EDv\u00E1te \u010Dasov\u00E1 raz\u00EDtka (-ts) a TSA server vy\u017Eaduje autentizaci.
 hlp.tsaUrl             = adresa TSA serveru (timestamping authority). P\u0159i pou\u017Eit\u00ED tohoto argumentu, bude k podpisu p\u0159ilo\u017Eeno \u010Dasov\u00E9 raz\u00EDtko (timestamp) z dan\u00E9ho serveru. (m\u016F\u017Eete nap\u0159 zkusit url http://dse200.ncipher.com/TSS/HttpTspServer)
 hlp.tsaUser            = u\u017Eivatelsk\u00E9 jm\u00E9no pro TSA. Pou\u017Eijte tuto volbu jestli\u017Ee vyu\u017E\u00EDv\u00E1te \u010Dasov\u00E1 raz\u00EDtka (-ts) a TSA server vy\u017Eaduje autentizaci.
